--- a/deutsche-springboot-demo/src/main/resources/application.properties
+++ b/deutsche-springboot-demo/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 spring.application.name=deutsche-springboot-demo
 server.port=9090
+server.servlet.context-path=/api/v1
+
+## zipkin tracing
+## for development
+management.tracing.sampling.probability=1.0
+## for production
+#management.tracing.sampling.probability=0.1
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+## for development
+management.endpoints.web.exposure.include=*
+## for production
+#management.endpoints.web.exposure.include=health,info,metrics
 
 #database properties -
 
 #PostgreSQL properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/deutsche
 spring.datasource.username=postgres
-spring.datasource.password=abhin
+spring.datasource.password=abhinb
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 #MySQL properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/deutsche
