logging in service class

--- a/deutsche-springboot-demo/src/main/resources/application.properties
+++ b/deutsche-springboot-demo/src/main/resources/application.properties
@@ -22,6 +22,12 @@ spring.datasource.password=abhinb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+# Set the root log level (applies to all packages)
+logging.level.root=INFO
+
+# Set specific log levels for your package
+logging.level.com.deutsche=DEBUG
+
 #MySQL properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/deutsche
 #spring.datasource.username=root
