--- a/deutsche-springboot-demo/src/main/resources/application.properties
+++ b/deutsche-springboot-demo/src/main/resources/application.properties
@@ -28,6 +28,9 @@ logging.level.root=INFO
 # Set specific log levels for your package
 logging.level.com.deutsche=DEBUG
 
+# Log file
+logging.file.name=app.log
+
 #MySQL properties
 #spring.datasource.url=jdbc:mysql://localhost:3306/deutsche
 #spring.datasource.username=root
