--- a/deutsche-springboot-demo/src/main/resources/application.properties
+++ b/deutsche-springboot-demo/src/main/resources/application.properties
@@ -13,14 +13,15 @@ management.endpoints.web.exposure.include=*
 ## for production
 #management.endpoints.web.exposure.include=health,info,metrics
 
-#database properties -
-
 #PostgreSQL properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/deutsche
 spring.datasource.username=postgres
 spring.datasource.password=abhinb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.security.user.name=user
+#spring.security.user.password=abhinb
 
 # Set the root log level (applies to all packages)
 logging.level.root=INFO
@@ -31,9 +32,3 @@ logging.level.com.deutsche=DEBUG
 # Log file
 logging.file.name=app.log
 
-#MySQL properties
-#spring.datasource.url=jdbc:mysql://localhost:3306/deutsche
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
